--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "keymirror": "^0.1.1",
+    "lodash.get": "^4.3.0",
     "meow": "^3.7.0",
     "request": "^2.72.0"
   }
