--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "inquirer": "^1.0.2",
     "keymirror": "^0.1.1",
     "lodash.get": "^4.3.0",
+    "lodash.pick": "^4.2.1",
     "meow": "^3.7.0",
     "request": "^2.72.0"
   }
