--- a/package.json
+++ b/package.json
@@ -13,11 +13,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^1.1.3",
     "inquirer": "^1.0.2",
     "keymirror": "^0.1.1",
+    "lodash": "^4.15.0",
     "lodash.get": "^4.3.0",
     "lodash.pick": "^4.2.1",
     "meow": "^3.7.0",
+    "ora": "^0.3.0",
     "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.13.2",
+    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-transform-async-to-generator": "^6.5.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
+    "babel-plugin-transform-es2015-parameters": "^6.6.4",
+    "babel-plugin-transform-es2015-spread": "^6.8.0",
+    "babel-plugin-transform-function-bind": "^6.5.2",
+    "babel-plugin-transform-object-assign": "^6.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.6.4",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "babel-runtime": "^6.11.6",
+    "devtron": "^1.3.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2"
   }
 }
